<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scorer AFL</string>
    <string name="q">Q1</string>
    <string name="qstart">Start Clock</string>
    <string name="ok">OK</string>
    <string name="add_a_team">Add a Team</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="select_away_team">Select Away Team</string>
    <string name="select_home_team">Select Home Team</string>
    <string name="goals">Goals  </string>
    <string name="total">Points</string>
    <string name="points">Behinds</string>
    <string name="length_of_quarter">Length of Quarter</string>
    <string name="action_title">Clock</string>
    <string name="action_reset">Master Reset</string>
    <string name="action_sel_home">Select Home Team</string>
    <string name="action_sel_away">Select Away Team</string>
    <string name="action_other">Other</string>
    <string name="action_exit">Quit</string>
    <string name="add">Add</string>
    <string name="not_yet_selected">Not yet Selected</string>
    <string name="zero">"  0"</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="not_playing">Not Playing Today</string>
    <string name="add_a_goal">Add a Goal</string>
    <string name="sub_a_goal">Subtract a Goal</string>
    <string name="add_a_behind">Add a Behind</string>
    <string name="sub_a_behind">Subtract a Behind</string>
    <string name="player">Players</string>
    <string name="add_a_player_h">Add a Home Player</string>
    <string name="add_a_player_a">Add an Away Player</string>
    <string name="print_reports">Print Reports</string>
    <string name="game_report">Game Report</string>
    <string name="home_team_report">Home Team Report</string>
    <string name="away_team_report">Away Team Report</string>
    <string name="_20">20</string>
    <string name="other_actions">Other Actions</string>
    <string name="help_actions">Help</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text"><b>TERMS OF USE, WARRANTY AND LIABILITY WAIVER</b> \n\n
The Kitstop “Scorer Wireless Scoreboard System” comes with the following terms , conditions and notices: \n
<b>Terms of Use:</b> \n
This product is offered to you based on your acceptance of the system without modification. \n
<b>Use Limitation:</b> \n
You may not modify, copy, distribute, transmit, reproduce, license, create derivative versions from, transfer, or sell, any information , software , products or services obtained from Kitstop or the “Scorer Wireless Scoreboard System”. \n
<b>One Year Warranty:</b> \n
This system is warranted against any manufactured defect for a period of twelve months from the date of installation. \n
<b>Limitation of Liability:</b> \n
In no event shall Kitstop be liable for any direct, indirect, punitive, incidental, special consequential damages whatsoever arising out of or connected with the use or misuse of the “Scorer Wireless Scoreboard System”. \n
<b>Copyright:</b> \n
All material in the Kitstop “Scorer Wireless Scoreboard System” is copyrighted. It is made available to give users easy and quick access to information. \n
You may download material from our web site for your own personal non-commercial use only. \n 
You may not alter, reproduce, re-transmit, distribute, display or commercialise the material in any way without written permission from Kitstop. \n
<b>General:</b> \n
This disclaimer statement is governed by the laws of the state of Victoria, Australia. \n 
</string>
    <string name="about">About SCaT</string>
    <string name="about_text"><b>Score, Count and Time</b> \n\n
Score Count and Time (SCaT) is a young company which specialises in the development and supply of bright, daylight visible displays which meet the needs of the strong sunlight of the great Australian outdoors. \n\n
If you need a display which shows you the Score, the Count or the Time for an event, then please contact us for more details on how our unique solutions are winning so many customers. \n\n
Geoff Champion , former senior engineer with the Telecom Research Laboratories , John Perrin , former Director of Motorola Australia , and Mr Stuart Wright former owner of Daneva Electronics have pooled their experience and expertise to develop cost effective , smart displays and scoreboards. \n\n
Please contact us by email at <b>scat@kitstop.com.au</b>  or by phone on <b>0432 502 755</b>. \n
</string>
    <string name="about_scat">About SCaT</string>
    <string name="_00_00">00:00</string>
    <string name="set_game_date">Set Game Date</string>
    <string name="game_date_not_yet_set">Game Date not yet set</string>
    <string name="usb_box_not_connected">WiFi Box not connected</string>
    <string name="usb_box_connected">WiFi Box connected</string>
    <string name="test_the_scoreboard">Test the Scoreboard</string>
    <string name="set_system_date_time">Set System Date &amp; Time</string>
    
    <string name="test">Test</string><string name="d_t_text">\n Go to <b>Date &amp; Time Icon</b> 
        					 on the Tablet Home Screen.\n</string>
    <string name="_">" "</string>
    <string name="log">Log</string>
    <string name="clear_log">Clear Log</string>
    <string name="set_ground">Set Ground</string>
    <string name="ground">Ground</string>
    <string name="system_modes">System Modes</string>
    <string name="mode_1_all_functons">Mode 1 - All Functons</string>
    <string name="mode_2_scoring_and_timing">Mode 2 - Scoring and Timing</string>
    <string name="mode_3_manager_functions">Mode 3 - Manager Functions</string>
    <string name="mode_4_manager_functions_with_wifi">Mode 4 - Manager Functions with WiFi</string>
    <string name="_g_">G+</string>
    <string name="g_">G-</string>
    <string name="b_">B-</string>
    <string name="_b_">B+</string>
    <string name="home_players">Home Players</string>
    <string name="away_players">Away Players</string>
    <string name="add_a_player">Add a Player</string>
    <string name="delete_a_player">Delete a Player</string>
    <string name="delete_a_home_player">Delete a Home Player</string>
    <string name="not_playing_today">Not Playing Today</string>
    <string name="delete_an_away_player">Delete an Away Player</string>
    <string name="finish_q">Finish Quarter</string>
    <string name="scorer_product_liability_disclaimer">Scorer Product Liability Disclaimer</string>
    <string name="settings">Settings</string>
    <string name="stop_clock">Stop Clock</string>
    <string name="resume_clock">Resume Clock</string>
    <string name="reset_clock">Reset Clock</string>
    <string name="clock_settings">Clock Settings</string>
    <string name="clock_count_up">Clock - Count Up</string>
    <string name="clock_count_down">Clock - Count Down</string>
    <string name="done">Done</string>
    <string name="about_scorer_afl">About Scorer AFL</string>
    <string name="up">Up</string>
    <string name="stop_test">Stop Test</string>
    <string name="setup_battery_test_parameters">Setup Battery Test Parameters</string>
    <string name="increment_">Increment %</string>
    <string name="threshold_value_">Threshold Value %</string>
    <string name="parameters">Parameters</string>
    <string name="password">Password</string>
    <string name="mode">System Mode</string>
    <string name="battery">Battery Setup</string>
    <string name="logging">Log</string>
    <string name="wifi">WiFi Setup</string>
    <string name="wifi_param">Setup WiFi Parameters</string>
    <string name="close">Close</string>
    <string name="digits">No. of Digits</string>
    <string name="SSID_Scorer">SSID Scorer_</string>
    <string name="Setup_digits">Setup No. of Digits</string>
    <string name="no_digits">No. of Digits</string>



    <string name="crash_toast_text">Crash</string>
    <string name="test_error">Test ERROR</string>


</resources>


