<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="280dp"
    android:background="@color/grey" >

    <TextView
        android:id="@+id/away_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/grey"
        android:text="@string/away_players"
        android:textColor="#0000ff"
        android:textSize="@dimen/f_team" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500sp"
        android:layout_below="@+id/away_players"
        android:background="@color/white"
        android:orientation="vertical" >

        <Button
            android:id="@+id/b_away_player_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70sp"
            android:layout_marginTop="20dp"
            android:onClick="onClick_AddAwayPlayer"
            android:text="@string/add_a_player" />

        <Button
            android:id="@+id/b_away_player_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65sp"
            android:layout_marginTop="20dp"
            android:onClick="onClick_DeleteAwayPlayer"
            android:text="@string/delete_a_player" />

        <Button
            android:id="@+id/b_away_player_not_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="20dp"
            android:onClick="onClick_NotPlayingAwayPlayer"
            android:text="@string/not_playing" />

    </LinearLayout>

</RelativeLayout>